# dkg_artifacts

./: .gitignore  Cargo.toml  Dockerfile  README.md
crypto/: .gitignore  Cargo.toml
crypto/benches/: dkg_micro_bench.rs
crypto/src/: dealing.rs  dealing_signature.rs  errors.rs  lib.rs  public_key.rs  secret_key.rs  serde_utils.rs
crypto/src/bls12381/: bls12381_serde.rs  cg_constants.rs  cg_encryption.rs  errors.rs  interpolate.rs  key_pop_zk.rs  mod.rs  nidkg_serde.rs  nidkg_zk_share.rs  polynomial.rs  public_evals.rs  random_oracle.rs  rng.rs  seed.rs  test_utils.rs  utils.rs
crypto/src/bls12381/mcl/: bls.rs  conv.rs  hash.rs  mcl_helper.rs  mod.rs  pair.rs  rom.rs
cs_deliver/: Cargo.toml
cs_deliver/src/: codeword.rs  errors.rs  lib.rs  messages.rs  node.rs  serde.rs  state.rs
cs_deliver/src/states/: wait_for_msgs.rs
cs_deliver/src/tests/: mod.rs
cs_deliver/src/types/: deliver_data.rs  deliver_event.rs  mod.rs
deliver/: Cargo.toml
deliver/benches/: benchmark.rs
deliver/src/: codeword.rs  errors.rs  messages.rs  node.rs  serde.rs  state.rs
deliver/src/states/: mod.rs  wait_for_msgs.rs
deliver/src/tests/: mod.rs
deliver/src/types/: deliver_data.rs  deliver_event.rs  mod.rs
miracl_core_bn_eth/: BN_eth.ipynb  Cargo.toml  README.md
miracl_core_bn_eth/src/: lib.rs
miracl_core_bn_eth/src/bn_eth/: big.rs  bls.rs  dbig.rs  ecp.rs  ecp2.rs  fp.rs  fp12.rs  fp2.rs  fp4.rs  mpin.rs  pair.rs  rom.rs
socrypto/: Cargo.toml
socrypto/core/: Cargo.toml  arch.md
socrypto/core/src/: lib.rs
socrypto/core/src/api/: mod.rs
socrypto/core/src/types/: digest.rs  domain.rs  error.rs  identity.rs  mod.rs  order.rs  ownable.rs  serde.rs
socrypto/nidkg_helper/: Cargo.toml
socrypto/nidkg_helper/benches/: cg_key_serde.rs
socrypto/nidkg_helper/src/: lib.rs  serde_utils.rs  utils.rs
socrypto/nidkg_helper/src/cgdkg/: dkg_meta.rs  mod.rs
socrypto/nidkg_helper/src/types/: mod.rs  private_key.rs  proof.rs  public_evals.rs  public_key.rs  signature.rs
socrypto/src/: lib.rs
sodkg/: Cargo.toml
sodkg/benches/: dkg_bench.rs
sodkg/src/: errors.rs  lib.rs
sodkg/src/class_group_dkg/: config.rs  messages.rs  mod.rs  node.rs  persistence.rs  state.rs  transaction.rs  utilities.rs
sodkg/src/class_group_dkg/states/: done.rs  init.rs  mod.rs  vote_dealing_meta.rs  vote_dkg_meta.rs  wait_aggregation.rs  wait_dkg_meta_from_smr.rs  wait_for_dealing_signature.rs
sodkg/src/class_group_dkg/tests/: mod.rs
sodkg/src/class_group_dkg/types/: dkg_data.rs  dkg_event.rs  mod.rs  signatures.rs
sodkg/src/sosmr_types/: errors.rs  lifecycle.rs  mod.rs  smr_timestamp.rs  traits.rs  view.rs  vote_maker.rs
sodkg/src/sosmr_types/committees/: dkg_committee.rs  mod.rs
sodkg/src/sosmr_types/transactions/: account_address.rs  common.rs  dkg_payload.rs  execution_status.rs  header.rs  mod.rs  oracle_payload.rs  payload.rs  priority_key.rs  protocol.rs  signed_transaction.rs  signer_data.rs  unsigned_transaction.rs  vote.rs
soruntime/: Cargo.toml
soruntime/src/: errors.rs  lib.rs  state.rs
soserde/: Cargo.toml
soserde/src/: errors.rs  lib.rs  serde_with_hex_human_readable_reflection.rs  size_in_bytes.rs  smr_serializer.rs
supra-xrbc-coi/batch/: Cargo.toml
supra-xrbc-coi/batch/src/: lib.rs
supra-xrbc-coi/batch/src/placeholders/: config.rs  mod.rs  payload_provider.rs
supra-xrbc-coi/block/: Cargo.toml
supra-xrbc-coi/block/src/: config.rs  lib.rs  proposer.rs
supra-xrbc-coi/crypto/: Cargo.toml
supra-xrbc-coi/crypto/src/: authenticator.rs  distributed_key.rs  error.rs  lib.rs  node_identity.rs  traits.rs
supra-xrbc-coi/crypto/src/dkg/: config.rs  mod.rs
supra-xrbc-coi/crypto/src/tests/: mod.rs  unit_test_authenticator_module.rs  unit_test_generate_distributed_key_for_chain.rs  unit_test_node_identity.rs
supra-xrbc-coi/erasure/: Cargo.toml
supra-xrbc-coi/erasure/src/: lib.rs
supra-xrbc-coi/erasure/src/codecs/: mod.rs  rs16.rs  rs8.rs
supra-xrbc-coi/erasure/src/utils/: codec_trait.rs  errors.rs  mod.rs
supra-xrbc-coi/metrics/: Cargo.toml
supra-xrbc-coi/metrics-logger/: Cargo.toml
supra-xrbc-coi/metrics-logger/src/: default_logger.rs  errors.rs  lib.rs  metric.rs  types.rs
supra-xrbc-coi/metrics/src/: lib.rs
supra-xrbc-coi/metrics/src/influx_collector/: backend.rs  config.rs  error.rs  mod.rs
supra-xrbc-coi/metrics/src/tests/: influx_metrics.rs  log_metrics.rs  mod.rs
supra-xrbc-coi/node/: Cargo.toml
supra-xrbc-coi/node/src/: chain_parameters.rs  cli.rs  generator.rs  helpers.rs  main.rs  runner.rs
supra-xrbc-coi/node/src/resources/: config.json  invalid_config.json  invalid_config_with_partial_data_dissemination.json  invalid_optional_network.json  network_config_1.json  optional_network.json  remote_ips_1.json  remote_ips_2.json  valid_config.json  valid_config_with_partial_data_dissemination.json  valid_optional_network.json
supra-xrbc-coi/primitives/: Cargo.toml
supra-xrbc-coi/primitives/src/: error.rs  lib.rs  serde.rs
supra-xrbc-coi/primitives/src/crypto/: mod.rs
supra-xrbc-coi/primitives/src/placeholders/: consumer.rs
supra-xrbc-coi/primitives/src/types/: clan_identifier.rs  header.rs  mod.rs  peer_global_index.rs  quorum_certificate.rs
supra-xrbc-coi/storage/: Cargo.toml
supra-xrbc-coi/storage/src/: config.rs  error.rs  lib.rs  rocksdb_store.rs  storage_client.rs
supra-xrbc-coi/storage/src/tests/: mod.rs  unit_test_rocksdb_ifc.rs
supra-xrbc-coi/vec-commitment/: Cargo.toml
supra-xrbc-coi/vec-commitment/benches/: serde_for_chunks.rs
supra-xrbc-coi/vec-commitment/src/: committed_chunk.rs  errors.rs  lib.rs  merkle_util.rs  txn_generator.rs
supra-xrbc-coi/x-rbc/: Cargo.toml
supra-xrbc-coi/x-rbc/src/: lib.rs
supra-xrbc-coi/x-rbc/src/arbiter/: clients.rs  errors.rs  messages.rs  mod.rs
supra-xrbc-coi/x-rbc/src/fsm/: committee_state_machine.rs  errors.rs  mod.rs  network_message_state_machine.rs  sync_state_machine.rs
supra-xrbc-coi/x-rbc/src/states/: mod.rs  sync_ready.rs  waiting_for_certificate.rs  waiting_for_data.rs  waiting_for_share.rs  waiting_for_sync_data.rs  waiting_for_vote.rs
(+202 files in other folders)
