[workspace]
members = [
    "socrypto",
    "deliver",
    "cs_deliver",
    "sodkg",
    "soruntime",
    "socrypto/nidkg_helper",
    "socrypto/core",
    "soserde",
    "crypto",
    "supra-bicycl"]

resolver = "2"

exclude = []

[workspace.package]
edition = "2021"

[workspace.dependencies]
tracing = { version = "0.1.40" }
web3 = "0.19.0"
chrono = "0.4.37"
bcs = "0.1.6"
thiserror = "1.0.35"
tokio = "1.26.0"
tokio-util = "0.7.7"
tokio-stream = "0.1.11"
futures = "0.3.26"
log = "0.4.17"
bytes = "1.4.0"
env_logger = "0.9.1"
rand = "0.8.5"
hex = "0.4.3"
base64 = { version = "0.22.1" }
serde = { version = "1.0.195", features = ["derive"] }
serde_bytes = { version = "0.11.15" }
serde_json = "1.0.117"
ed25519-dalek = { version = "2.1.1"}
sha3 = "0.10.1"
bincode = "1.3.3"
generic-array = "0.14.6"
criterion = "0.5.1"
async-trait = "0.1.64"
libp2p = { version = "0.54.1", features = [
    "noise",
    "tcp",
    "tokio",
    "yamux",
    "macros",
    "request-response",
    "dns"
] }
asynchronous-codec = "0.7.0"
anyhow = "1.0.79"
void = { version = "1" }
bimap = "0.6.3"
tabled = { version = "0.16.0", features = ["std", "derive"] }
enum-kinds = "0.5.1"
rayon = { version = "1.10.0" }
utoipa = { version = "4.2.3", features = ["preserve_order", "non_strict_integers"] }

# socrypt/nidkg_helper dependencies
crypto = { package = "crypto", path = "./crypto", features = ["mcl"] }
bicycl = { package = "bicycl", path = "./supra-bicycl" }
miracl_core_bn_eth = { package = "miracl_core_bn_eth", path = "./miracl_core_bn_eth", features = ["std"] }
miracl_core_bls12381 = "4.1.2"
miracl_core_ed25519 = "0.2.0"
blst = "0.3.13"
rand_chacha = "0.2.2"
array-init = "2.0.1"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
zeroize = "1.7.0"
async_counter = "0.1.3"

blsttc = "8.0.2"
lazy_static = "1.4.0"

#deliver dependencies
erasure = { package = "erasure", path = "./supra-xrbc-coi/erasure"}
vec_commitment = { package = "vec_commitment", path = "./supra-xrbc-coi/vec-commitment"}
primitives = { package = "primitives", path = "./supra-xrbc-coi/primitives"}

# Own members
soserde = { path = "./soserde" }
socrypto = { path = "./socrypto" }
deliver = { path = "deliver" }
cs_deliver = { path = "cs_deliver" }
soruntime = { path = "./soruntime" }
socrypto-core = { path = "./socrypto/core" }

nidkg_helper = { path = "./socrypto/nidkg_helper" }
