[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
hex = "0.4.2"
cpp_std = "0.1.1"
miracl_core_bls12381 = "4.1.2"
miracl_core_ed25519 = "0.2.0"
blst = "0.3.13"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "zeroize"]}
rand = "0.8"
rand_chacha = "0.2.2"
zeroize = { version = "1.4.3", features = ["zeroize_derive"] }
sha2 = { version = "0.10.7", optional = true }
thiserror = "1.0.35"
serde = { version = "1.0.197", features = ["derive"] }
base64 = "0.22.1"
bincode = "1.3.3"
bicycl = {package = "bicycl", path = "../supra-bicycl"}
rayon = "1.9.0"

blsttc = "8.0.2"

[features]
mcl = ["dep:sha2"]

[dev-dependencies]
criterion = "0.5.1"
proptest = "1.0.0"

[build-dependencies.ritual_build]
git = "https://github.com/rust-qt/ritual.git"
rev = "e2b9b40f1ff57743ae0f3bf3cca43ef84545fc85"
version = "0.3.0"

[dependencies.cpp_core]
git = "https://github.com/rust-qt/ritual.git"
rev = "e2b9b40f1ff57743ae0f3bf3cca43ef84545fc85"
version = "0.5.0"

[[bench]]
name = "dkg_micro_bench"
harness = false