[package]
name = "cs_deliver"
version = "0.4.0"
edition.workspace = true


[dependencies]
erasure.workspace = true
vec_commitment.workspace = true
primitives.workspace = true
socrypto = { workspace = true }
soruntime = { workspace = true }
log.workspace = true
thiserror.workspace = true
enum-kinds = { workspace = true }
env_logger.workspace = true
rand.workspace = true
tiny-keccak.workspace = true
ed25519-dalek.workspace = true
