[package]
name = "deliver"
version = "0.4.0"
edition.workspace = true


[dependencies]
erasure.workspace = true
vec_commitment.workspace = true
primitives.workspace = true
socrypto = { workspace = true }
soruntime = { workspace = true }
log.workspace = true
thiserror.workspace = true
enum-kinds = { workspace = true }
env_logger.workspace = true
rand.workspace = true


[[bench]]
name = "benchmark"
harness = false

[dev-dependencies]
criterion = { workspace = true, features = ["async_futures", "async_tokio", "html_reports"] }
