[package]
name = "socrypto"
version = "0.4.0"
edition.workspace = true


[dependencies]
thiserror.workspace = true
rand.workspace = true
hex.workspace = true
base64.workspace = true
serde = { workspace = true, features = ["derive"] }
generic-array.workspace = true
sha3.workspace = true
ed25519-dalek = { workspace = true, features = ["batch", "rand_core"] }
zeroize = { workspace = true }
socrypto-core = { workspace = true }
