[package]
name = "soruntime"
version = "0.2.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socrypto = { workspace = true }
# sosmr = { workspace = true }
# sop2p = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
