[package]
name = "soserde"
version = "0.0.1"
edition = { workspace = true }

[dependencies]
bcs = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
hex = { workspace = true }
