[package]
name = "socrypto-core"
version = "0.0.1"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive"] }
ed25519-dalek = { workspace = true, features = ["batch", "digest"] }
base64 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
sha3 = { workspace = true }
crypto = { workspace = true }
miracl_core_bls12381 = { workspace = true }
serde_bytes = { workspace = true }
miracl_core_bn_eth = { workspace = true }
hex = { workspace = true, features = ["serde"] }
utoipa = { workspace = true, features = ["preserve_order"] }
soserde = { workspace = true }

[features]
default = ["prod_rand", "sig"]
prod_rand = []
agg_sig = []
sig = []

[dev-dependencies]
serde_json = { workspace = true }
