[package]
name = "metrics-logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.0"
tracing-log = { version = "0.1.3" }
env_logger = {version = "0.10.0"}
async-trait = "0.1.64"
tokio = { version = "1.28.0", features = ["full"]}
