[package]
name = "metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
log = { version = "0.4.17" }
env_logger = "0.10.0"
itertools = "0.10.5"
thiserror = { version = "1.0.37" }
once_cell = "1.17.0"
async-trait = "0.1.64"
futures-lite = "1.12.0"
tokio = { version = "1.28.0", features = ["full"]}

influxdb2 = "0.3.7"

primitive-types = { version = "0.12.1", features = ["serde"] }
metrics-logger = {version = "0.1.0", path = "../metrics-logger"}
