[package]
name = "primitives"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {  version = "1.28.0", features = ["full"]}
bincode = { version = "1.3.2"}
bytes = { version = "1.2.1"}
thiserror = { version = "1.0.37" }
serde = { version = "1.0.147", features = ["derive"]}
serde-big-array = { version = "0.5.0" }
hex = {version  = "0.4.3"}
sha3 = { version = "0.10.1" }
log = { version = "0.4.17" }
async-trait = { version = "0.1.68"}

metrics = {version = "0.1.0", path = "../metrics"}
