[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.19.0"
tokio = {  version = "1.28.0", features = ["full"]}
thiserror = { version = "1.0.37" }
async-trait = "0.1.64"
dashmap = "5.4.0"
log = { version = "0.4.17" }
futures = "0.3.26"

primitives = { version = "0.2.0", path = "../primitives" }
