[package]
name = "vec_commitment"
version = "0.2.0"
edition = "2021"

[dependencies]
thiserror = { version = "1.0.37" }
rs_merkle = "1.2.0"

rand = "0.7.3"
rayon = "1.5.3"
ed25519-dalek = "1.0.1"
bincode = "1.3.3"
sha3 = "0.10.1"
serde = {version = "1.0", features = ["derive"]}
tiny-keccak = { version = "2.0.0", features = ["sha3"] }

erasure = { version = "0.2.0", path = "../erasure" }
primitives = { version = "0.2.0", path = "../primitives" }

[dev-dependencies]
glassbench = "0.3.1"
bytes = "1.3.0"
byte-unit = "4.0.18"

[[bench]]
name = "serde_for_chunks"
harness = false
