[package]
name = "x-rbc"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {  version = "1.28.0", features = ["full"]}
sfsm = { version = "0.4.3", git = "https://gitlab.com/aregng/sfsm.git", branch="generic_sfsm_support"}
#sfsm = { version = "0.4.3", path = "../../sfsm" }

env_logger = { version = "0.9.1"}
log = { version = "0.4.17" }
thiserror = { version = "1.0.37" }
async-trait = { version = "0.1.58" }
itertools = "0.10.5"
serde = { version = "1.0.147", features = ["derive"] }
bytes = { version = "1.0.1" }
futures = { version = "0.3.14" }
serde-big-array = { version = "0.5.0" }
bincode = "1.3.3"
serde_json = "1.0.96"

# Local Dependencies
primitives = { version = "0.2.0", path = "../primitives" }
network = { version = "0.2.0", path = "../network" }
crypto = { version = "0.2.0", path = "../crypto"}
vec_commitment = { version = "0.2.0", path = "../vec-commitment" }
erasure = { version = "0.2.0", path = "../erasure" }
storage = {version = "0.1.0", path = "../storage" }
block = {version = "0.1.0", path = "../block" }
metrics = {version = "0.1.0", path = "../metrics"}

[dev-dependencies]
network = { version = "0.2.0", path = "../network", features=["test"] }
rand = "0.7.3"
serde_json= "1.0.89"
